# llm_sparse_activations_research

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
config/: mlflow_config.yaml  model_config.yaml  train_config.yaml
inference/: entry_generation.py
scripts/: launch_train.sh
src/: callbacks.py  config.py  data.py  entry_train.py  eval_perplexity.py  model.py  prepare_dataset.py  trainer.py  utils.py
